[vanilla-0.0.8] * Default Main Menu fixes   - Improved where the menu starts from when off screen * Drag Bar fixes   - Improved how the window moves relative to the cursor * Midori fixes   - Midori does not use drag events, this was compensated for   - Midori needs different math for calculating window position * Formatting fixes.   - Removed an un-needed comment   - Restored spacing for task minimizing and maximizing
	modified:   web-window-styles.css
	modified:   web-window-vanilla.js

--- a/web-window-styles.css
+++ b/web-window-styles.css
@@ -114,6 +114,8 @@ body {
     color: #fff;
     font-weight: bold;
     text-shadow: 0 1px 2px #000;
+    list-style: none;
+    float: left;
 }
 
 #web-window-taskbar li:hover {
@@ -178,7 +180,7 @@ body {
     background: linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 1));
 }
 .web-window-main-menu-minimize {
-    top: -100% !important;
+    top: -110% !important;
     padding: 0;
 }
 .web-window-tagui-list {
